--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ hs_err_pid*
 # http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
 
 dist/*
-target/
+target/**
 lib_managed/
 src_managed/
 project/boot/
@@ -36,8 +36,8 @@ project/plugins/project/
 .cache
 .lib/
 ### Scala template
-*.class
-*.log
+**.class
+**.log
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -48,13 +48,7 @@ project/plugins/project/
 .idea/dictionaries
 
 # Sensitive or high-churn files:
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.xml
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
+.idea/**
 
 # Gradle:
 .idea/**/gradle.xml
